# Algorithm

./: CMakeLists.txt  Insert_Position.cpp  Judge_Square.cpp  Maximum_Subarray.cpp  Plus_One.cpp  README.md  Remove_Element.cpp  Reverse_Integer.cpp  Two_Sum.cpp  main.cpp  removeDuplicates.cpp  review.cpp  revision.txt  tmp.cpp
InterviewQ/: Combine_m_times_min_power.cpp  Find_max_sum_in_Matrix.cpp  Find_the_All_Integer_Pair.cpp  Find_the_Number_of_Important_City.cpp  Find_the_longest_continuous_number_sum.cpp  Get_min_M_for_Lowest_Common_Multiple.cpp  Go_Up_the_Stairs.cpp  Go_up_the_stairs.cpp  IsExist_Appropriate_Solution_For_Question.cpp  Judge_Direction.cpp  Judge_Square.cpp  Max_Duplication_Area_Number.cpp
InterviewQ/bytedance_2019_3_16/: question1.cpp  question2.cpp  question3.cpp  question4.cpp  quick_sort.cpp
Leetcode/: Insert_Position.cpp  Maximum_Subarray.cpp  Merge_Sorted_Array.cpp  Palindrome_Number.cpp  Pascal_Triangle.cpp  Pascal_Triangle_two.cpp  Plus_One.cpp  Remove_Duplicates.cpp  Remove_Element.cpp  Reverse_Integer.cpp  Two_Sum.cpp  a_1_Two_Sum.cpp  a_2_Add_Two_Numbers.cpp  a_5_Longest_Palindromic_Substring.cpp  a_7_Reverse_Integer.cpp  a_9_Palindrome_Number.cpp  b_13_Roman_to_Integer.cpp  b_14_Longest_Common_Prefix.cpp  b_19_Remove_Nth_Node_From_End_of_List.cpp  b_20_Valid_Parentheses.cpp  b_21_Merge_Two_Sorted_Lists.cpp  b_26_Remove_Duplicates.cpp  b_27_Remove_Element.cpp  b_28_Implement_strStr.cpp  b_33_Search_in_Rotated_Sorted_Array.cpp  b_35_Insert_Position.cpp  b_38_Count_and_Say.cpp  b_39_Combination_Sum.cpp  b_49_Group_Anagrams.cpp  b_53_Maximum_Subarray.cpp  b_55_Jump_Game.cpp  b_58_Length_of_Last_word.cpp  b_66_Plus_One.cpp  b_67_Add_Binary.cpp  b_69_Sqrt_x.cpp  b_70_Climbing_Stairs.cpp  b_75_sort_Colors.cpp  b_79_Word_Search.cpp  b_80_Remove_Duplicated_From_Sorted_Array_II.cpp  b_83_Remove_Duplicates_From_Sorted_List.cpp  (+222 more)
NOTES/: Linked_List.txt  c++内存管理.txt  c++误区扫盲.txt  improve_code_effectiveness.txt  map.txt  note.txt  queue.txt  revision.md  revision.txt  set.txt  sort().txt  stack.txt  string.txt  struct.txt  tree.txt  vector.txt  几种重要的算法思想.txt
Routine/: Buy_with_Coke.cpp  Buy_with_Which_method.cpp  Find_Top_k_duplication.cpp  Zero_Number_N_Factorial.cpp  reConstruct_Binary_Tree.cpp  reverse_single_linked_list.cpp  sort_algorithm.cpp  the_first_lack_integer.cpp
niuke/: AAAAA_Adjust_Array_Odd_Even.cpp  AAAAA_Binary_Tree_Sub_Struc.cpp  AAAAA_Number_Exponent.cpp  Binary_Number_of_One.cpp  Change_String_Space.cpp  Fibonacci.cpp  Frog_Jumping_Stairs.cpp  LinkNode_last_k_th_Node.cpp  Merge_Two_Sorted_ListNode.cpp  Min_Num_in_Rotate_Array.cpp  Print_Binary_Tree.cpp  Rectangle_Cover.cpp  Revert_ListNode.cpp  The_Mirror_of_Binary_Tree.cpp
niuke/huawei/: MOCK_EXAMS_Sort_Array_By_Swap_With_Zero.cpp  MOCK_EXAMS_Sum_Two_Number.cpp
