cmake_minimum_required(VERSION 3.9)
project(Algorithm)

set(CMAKE_CXX_STANDARD 11)

add_executable(Algorithm tmp)

add_executable(Two_Sum Leetcode/a_1_Two_Sum)

add_executable(Remove_Duplicates Leetcode/b_26_Remove_Duplicates)

add_executable(Judge_Square InterviewQ/Judge_Square)

add_executable(Judge_Direction InterviewQ/Judge_Direction)

add_executable(Reverse_Integer Leetcode/a_7_Reverse_Integer)

add_executable(Remove_Element Leetcode/b_27_Remove_Element)

add_executable(Plus_One Leetcode/b_66_Plus_One)

add_executable(Insert_Position Leetcode/b_35_Insert_Position)

add_executable(Maximum_Subarray Leetcode/b_53_Maximum_Subarray)

add_executable(Palindrome_Number Leetcode/a_9_Palindrome_Number)

add_executable(Merge_Sorted_Array Leetcode/b_88_Merge_Sorted_Array)

add_executable(Pascal_Triangle Leetcode/c_118_Pascal_Triangle)

add_executable(Pascal_Triangle_two Leetcode/c_119_Pascal_Triangle_two)

add_executable(Buy_Sell_Stock Leetcode/c_121_Buy_Sell_Stock)

add_executable(Zero_Number_N_Factorial Routine/Zero_Number_N_Factorial)

add_executable(Buy_Sell_Stock_two Leetcode/c_122_Buy_Sell_Stock_two)

add_executable(Two_Sum_two Leetcode/c_167_Two_Sum_Two)

add_executable(Majority_Element Leetcode/c_169_Majority_Element)

add_executable(Contains_Duplicate Leetcode/c_217_Contains_Duplicate)

add_executable(Contains_Duplicate_two Leetcode/c_219_Contains_Duplicate_two)

add_executable(Missing_Number Leetcode/c_268_Missing_Number)

add_executable(Move_Zeroes Leetcode/c_283_Move_Zeroes)

add_executable(Third_Maximum_Number Leetcode/c_414_Third_Maximum_Number)

add_executable(Fine_All_Numbers_Disappeared Leetcode/c_448_Fine_All_Numbers_Missing)

add_executable(Max_Consecutive_Ones Leetcode/c_485_Max_Consecutive_Ones)

add_executable(K_diff_Pairs Leetcode/c_532_K_diff_Pairs_in_an_Array)

add_executable(Array_Partition_I Leetcode/c_561_Array_Partition_I)

add_executable(Reshape_the_Matrix Leetcode/c_566_Reshape_the_Matrix)

add_executable(Shortest_Unsorted_Continuous_Subarray Leetcode/c_581_Shortest_Unsorted_Continuous_Subarray)

add_executable(Can_Place_Flowers Leetcode/c_605_Can_Place_Flowers)

add_executable(Maximum_Product_of_Three_Numbers Leetcode/c_628_Maximum_Product_of_Three_Numbers)

add_executable(Rotate_Array Leetcode/c_189_Rotate_Array)

add_executable(Maximum_Average_Subarray_I Leetcode/c_643_Maximum_Average_Subarray_I)

add_executable(Image_Smoother Leetcode/c_661_Image_Smoother)

add_executable(Longest_Continuous_Increasing_Subsequence Leetcode/c_674_Longest_Continuous_Increasing_Subsequence)

add_executable(Max_Area_of_Island Leetcode/c_695_Max_Area_of_Island)

add_executable(Degree_of_an_Array Leetcode/c_697_Degree_of_an_Array)

add_executable(1_bit_and_2_bit_Characters Leetcode/c_717_1_bit_and_2_bit_Characters)

add_executable(Find_Pivot_Index Leetcode/c_724_Find_Pivot_Index)

add_executable(Largest_Number_At_Least_Twice_of_others Leetcode/c_747_Largest_Number_At_Least_Twice_of_Others)

add_executable(Non_decreasing_Array Leetcode/c_665_Non_decreasing_Array)

add_executable(Toeplitz_Matrix Leetcode/c_766_Toeplitz_Matrix)

add_executable(Min_Cost_Climbing_Stairs Leetcode/c_746_Min_Cost_Climbing_Stairs)

add_executable(Single_Number Leetcode/c_136_Single_Number)

add_executable(Happy_Number Leetcode/c_202_Happy_Number)

add_executable(Count_Primes Leetcode/c_204_Count_Primes)

add_executable(Valid_Anagram Leetcode/c_242_Valid_Anagram)

add_executable(Isomorphc_Strings Leetcode/c_205_Isomorphic_Strings)

add_executable(Intersection_of_Two_Arrays Leetcode/c_349_Intersection_of_Two_Arrays)

add_executable(Count_and_Say Leetcode/b_38_Count_and_Say)

add_executable(Remove_Duplicated_From_Sorted_List Leetcode/b_83_Remove_Duplicates_From_Sorted_List)

add_executable(Add_Binary Leetcode/b_67_Add_Binary)

add_executable(Buy_with_Which_method Routine/Buy_with_Which_method)

add_executable(Buy_with_Coke Routine/Buy_with_Coke)

add_executable(Intersection_of_Two_Arrays_2 Leetcode/c_350_Intersection_of_Two_Arrays_2)

add_executable(Merge_Two_Sorted_Lists Leetcode/b_21_Merge_Two_Sorted_Lists)

add_executable(Reverse_Linked_List Leetcode/c_206_Reverse_Linked_List)

add_executable(Excel_Sheet_Column_Number Leetcode/c_171_Excel_Sheet_Column_Number)

add_executable(Power_of_Two Leetcode/c_231_Power_of_Two)

add_executable(Factorial_Trailing_Zeroes Leetcode/c_172_Factorial_Trailing_Zeroes)

add_executable(Power_of_Three Leetcode/c_326_Power_of_Three)

add_executable(Add_Digits Leetcode/c_258_Add_Digits)

add_executable(First_Unique_Character_in_a_String Leetcode/c_387_First_Unique_Character_in_a_String)

add_executable(Find_the_Difference Leetcode/c_389_Find_the_Difference)

add_executable(Longest_Palindrome Leetcode/c_409_Longest_Palindrome)

add_executable(Find_All_Anagrams_in_a_String Leetcode/c_438_Find_All_Anagrams_in_a_String)

add_executable(Number_of_Boomerangs Leetcode/c_447_Number_of_Boomerangs)

add_executable(Island_Perimeter Leetcode/c_463_Island_Perimeter)

add_executable(Keyboard_Row Leetcode/c_500_Keyboard_Row)

add_executable(Distribute_Candies Leetcode/c_575_Distribute_Candies)

add_executable(Linked_List_Cycle Leetcode/c_141_Linked_List_Cycle)

add_executable(Find_Top_k_duplication InterviewQ/Find_Top_k_duplication)

add_executable(Delete_Node_in_a_Linked_List Leetcode/c_237_Delete_Node_in_a_Linked_List)

add_executable(Remove_Linked_List_Elements Leetcode/c_203_Remove_Linked_List_Elements)

add_executable(Add_Strings Leetcode/c_415_Add_Strings)

add_executable(Ugly_Number Leetcode/c_263_Ugly_Number)

add_executable(Intersection_of_Two_Linked_Lists Leetcode/c_160_Intersection_of_Two_Linked_Lists)

add_executable(Arranging_Coins Leetcode/c_441_Arranging_Coins)

add_executable(Perfect_Number Leetcode/c_507_Perfect_Number)

add_executable(Longest_Common_Prefix Leetcode/b_14_Longest_Common_Prefix)

add_executable(Reverse_Vowels_of_a_String Leetcode/c_345_Reverse_Vowels_of_a_String)

add_executable(Ransom_Note Leetcode/c_383_Ransom_Note)

add_executable(Length_of_Last_Word Leetcode/b_58_Length_of_Last_word)

add_executable(Number_of_Segments_in_a_String Leetcode/c_434_Number_of_Segments_in_a_String)

add_executable(Repeated_Substring_Pattern Leetcode/c_459_Repeated_Substring_Pattern)

add_executable(String_Compression Leetcode/c_443_String_Compression)

add_executable(Valid_Palindrome_II Leetcode/c_680_Valid_Palindrome_II)

add_executable(Reverse_String_II Leetcode/c_541_Reverse_String_II)

add_executable(Repeated_String_Match Leetcode/c_686_Repeated_String_Match)

add_executable(Valid_Perfect_Square Leetcode/c_367_Valid_Perfect_Square)

add_executable(Guess_Number_Higher_or_Lower Leetcode/c_374_Guess_Number_Higher_or_Lower)

add_executable(Find_Smallest_Letter_Greater_Than_Target Leetcode/c_744_Find_Smallest_Letter_Greater_Than_Target)

add_executable(Student_Attendance_Record_I Leetcode/c_551_Student_Attendance_Record_I)

add_executable(Sqrt_x Leetcode/b_69_Sqrt_x)

add_executable(Peak_Index_in_a_Mountain Leetcode/c_852_Peak_Index_in_a_Mountain)

add_executable(Kth_Largest_Element_in_an_Array Leetcode/c_215_Kth_Largest_Element_in_an_Array)

add_executable(Positions_of_Large_Groups Leetcode/c_830_Positions_of_Large_Groups)

add_executable(Go_up_the_stairs InterviewQ/Go_Up_the_Stairs)

add_executable(Valid_Parentheses Leetcode/b_20_Valid_Parentheses)

add_executable(Valid_Palindrome Leetcode/c_125_Valid_Palindrome)

add_executable(Min_Stack Leetcode/c_155_Min_Stack)

add_executable(Implement_Stack_using_Queues Leetcode/c_225_Implement_Stack_using_Queues)

add_executable(First_Bad_Version Leetcode/c_278_First_Bad_Version)

add_executable(Binary_Search Leetcode/c_704_Binary_Search)

add_executable(Wiggle_Sort_II Leetcode/c_324_Wiggle_Sort_II)

add_executable(Baseball_Game Leetcode/c_682_Baseball_Game)

add_executable(reverse_single_linked_list Routine/reverse_single_linked_list)

add_executable(Palindrome_Linked_List Leetcode/c_234_Palindrome_Linked_List)

add_executable(Excel_Sheet_Column_Title Leetcode/c_168_Excel_Sheet_Column_Title)

add_executable(Rectangle_Overlap Leetcode/c_836_Rectangle_Overlap)

add_executable(Longest_Harmonious_Subsequence Leetcode/c_594_Longest_Harmonious_Subsequence)

add_executable(Sum_of_Square_Numbers Leetcode/c_633_Sum_of_Square_Numbers)

add_executable(sort_Colors Leetcode/b_75_sort_Colors)

add_executable(Koko_Eating_Bananas Leetcode/c_875_Koko_Eating_Bananas)

add_executable(the_first_lack_integer Routine/the_first_lack_integer)

add_executable(Range_Sum_Query_2D_Immutable Leetcode/c_304_Range_Sum_Query_2D_Immutable)

add_executable(Remove_Duplicated_From_Sorted_Array_II Leetcode/b_80_Remove_Duplicated_From_Sorted_Array_II)

add_executable(Reconstruct_Itinerary Leetcode/c_332_Reconstruct_Itinerary)

add_executable(Path_Sum_II Leetcode/c_113_Path_Sum_II)

add_executable(Convert_BST_to_Greater_Tree Leetcode/c_538_Convert_BST_to_Greater_Tree)

add_executable(Insertion_Sort_List Leetcode/c_147_Insertion_Sort_List)

add_executable(Is_Subsequence Leetcode/c_392_Is_Subsequence)

add_executable(Delete_Node_in_a_BST Leetcode/c_450_Delete_Node_in_a_BST)

add_executable(Find_the_All_Integer_Pair InterviewQ/Find_the_All_Integer_Pair)

add_executable(Max_Duplication_Area_Number InterviewQ/Max_Duplication_Area_Number)

add_executable(Transpose_Matrix Leetcode/c_867_Transpose_Matrix)

add_executable(Implement_Queue_using_Stacks Leetcode/c_232_Implement_Queue_using_Stacks)

add_executable(Most_Frequent_Subtree_Sum Leetcode/c_508_Most_Frequent_Subtree_Sum)

add_executable(Search_in_Rotated_Sorted_Array Leetcode/b_33_Search_in_Rotated_Sorted_Array)

add_executable(Number_of_Islands Leetcode/c_200_Number_of_Islands)

add_executable(Insert_into_a_Binary_Search_Tree Leetcode/c_701_Insert_into_a_Binary_Search_Tree)

add_executable(Product_of_Array_Except_Self Leetcode/c_238_Product_of_Array_Except_Self)

add_executable(Permutation_in_String Leetcode/c_567_Permutation_in_String)

add_executable(House_Robber_II Leetcode/c_213_House_Robber_II)

add_executable(Minimum_Size_Subarray_Sum Leetcode/c_209_Minimum_Size_Subarray_Sum)

add_executable(Nim_Game Leetcode/c_292_Nim_Game)

add_executable(Max_Increase_to_Keep_City_Skyline Leetcode/c_807_Max_Increase_to_Keep_City_Skyline)

add_executable(Group_Anagrams Leetcode/b_49_Group_Anagrams)

add_executable(Fizz_Buzz Leetcode/c_412_Fizz_Buzz)

add_executable(Daily_Temperatures Leetcode/c_739_Daily_Temperatures)

add_executable(Rotate_String Leetcode/c_796_Rotate_String)

add_executable(Find_the_longest_continuous_number_sum InterviewQ/Find_the_longest_continuous_number_sum)

add_executable(Jump_Game Leetcode/b_55_Jump_Game)

add_executable(Minimum_Distance_Between_BST_Nodes Leetcode/c_783_Minimum_Distance_Between_BST_Nodes)

add_executable(Lowest_Common_Ancestor_of_a_Binary_Search_Tree Leetcode/c_235_Lowest_Common_Ancestor_of_a_Binary_Search_Tree)

add_executable(Get_min_M_for_Lowest_Common_Multiple InterviewQ/Get_min_M_for_Lowest_Common_Multiple)

add_executable(Find_the_Number_of_Important_City InterviewQ/Find_the_Number_of_Important_City)

add_executable(IsExist_Appropriate_Solution_For_Question InterviewQ/IsExist_Appropriate_Solution_For_Question)

add_executable(Leaf_Similar_Trees Leetcode/c_872_Leaf_Similar_Trees)

add_executable(Combine_m_times_min_power InterviewQ/Combine_m_times_min_power)

add_executable(Implement_strStr Leetcode/b_28_Implement_strStr)

add_executable(same_tree Leetcode/c_100_same_tree)

add_executable(Binary_Tree_Preorder_Traversal Leetcode/c_144_Binary_Tree_Preorder_Traversal)

add_executable(Binary_Tree_Inorder_Traversal Leetcode/b_94_Binary_Tree_Inorder_Traversal)

add_executable(Binary_Tree_Postorder_Traversal Leetcode/c_145_Binary_Tree_Postorder_Traversal)

add_executable(Find_Duplicate_Number Leetcode/c_287_Find_Duplicate_Number)

add_executable(Minimum_Falling_Path_Sum Leetcode/c_931_Minimum_Falling_Path_Sum)

add_executable(Climbing_Stairs Leetcode/b_70_Climbing_Stairs)

add_executable(Symmetric_Tree Leetcode/c_101_Symmetric_Tree)

add_executable(Kth_Smallest_Element_in_a_BST Leetcode/c_230_Kth_Smallest_Element_in_a_BST)

add_executable(Asteroid_Collision Leetcode/c_735_Asteroid_Collision)

add_executable(Search_in_a_Binary_Search_Tree Leetcode/c_700_Search_in_a_Binary_Search_Tree)

add_executable(Maximum_Depth_of_Binary_Tree Leetcode/c_104_Maximum_Depth_of_Binary_Tree)

add_executable(Binary_Tree_Level_Order_Traversal_II Leetcode/c_107_Binary_Tree_Level_Order_Traversal_II)

add_executable(Convert_Sorted_Array_to_Binary_Search_Tree Leetcode/c_108_Convert_Sorted_Array_to_Binary_Search_Tree)

add_executable(Balanced_Binary_Tree Leetcode/c_110_Balanced_Binary_Tree)

add_executable(Minimum_Depth_of_Binary_Tree Leetcode/c_111_Minimum_Depth_of_Binary_Tree)

add_executable(Path_Sum Leetcode/c_112_Path_Sum)

add_executable(Invert_Binary_Tree Leetcode/c_226_Invert_Binary_Tree)

add_executable(Binary_Tree_Paths Leetcode/c_257_Binary_Tree_Paths)

add_executable(Sum_of_Left_Leaves Leetcode/c_404_Sum_of_Left_Leaves)

add_executable(N_ary_Tree_Level_Order_Traversal Leetcode/c_429_N_ary_Tree_Level_Order_Traversal)

add_executable(Path_Sum_III Leetcode/c_437_Path_Sum_III)

add_executable(Find_Mode_in_Binary_Search_Tree Leetcode/c_501_Find_Mode_in_Binary_Search_Tree)

add_executable(Diameter_of_Binary_Tree Leetcode/c_543_Diameter_of_Binary_Tree)

add_executable(Maximum_Depth_of_N_ary_Tree Leetcode/c_559_Maximum_Depth_of_N_ary_Tree)

add_executable(Binary_Tree_Tilt Leetcode/c_563_Binary_Tree_Tilt)

add_executable(Subtree_of_Another_Tree Leetcode/c_572_Subtree_of_Another_Tree)

add_executable(N_ary_Tree_Preorder_Traversal Leetcode/c_589_N_ary_Tree_Preorder_Traversal)

add_executable(N_ary_Tree_Postorder_Traversal Leetcode/c_590_N_ary_Tree_Postorder_Traversal)

add_executable(Construct_String_from_Binary_Tree Leetcode/c_606_Construct_String_from_Binary_Tree)

add_executable(Merge_Two_Binary_Trees Leetcode/c_617_Merge_Two_Binary_Trees)

add_executable(Average_of_Levels_in_Binary_Tree Leetcode/c_637_Average_of_Levels_in_Binary_Tree)

add_executable(Two_Sum_IV_Input_is_a_BST Leetcode/c_653_Two_Sum_IV_Input_is_a_BST)

add_executable(Trim_a_Binary_Search_Tree Leetcode/c_669_Trim_a_Binary_Search_Tree)

add_executable(Second_Minimum_Node_in_a_Binary_Tree Leetcode/c_671_Second_Minimum_Node_in_a_Binary_Tree)

add_executable(Increasing_Order_Search_Tree Leetcode/c_897_Increasing_Order_Search_Tree)

add_executable(Longest_Univalue_Path Leetcode/c_687_Longest_Univalue_Path)

add_executable(Univalued_Binary_Tree Leetcode/c_965_Univalued_Binary_Tree)

add_executable(Fair_Candy_Swap Leetcode/c_888_Fair_Candy_Swap)

add_executable(Flipping_an_Image Leetcode/c_832_Flipping_an_Image)

add_executable(Magic_Squares_in_Grid Leetcode/c_840_Magic_Squares_in_Grid)

add_executable(Maximize_Distance_to_Closest_Person Leetcode/c_849_Maximize_Distance_to_Closest_Person)

add_executable(Monotonic_Array Leetcode/c_896_Monotonic_Array)

add_executable(X_of_a_Kind_in_a_Deck_of_Cards Leetcode/c_914_X_of_a_Kind_in_a_Deck_of_Cards)

add_executable(Sort_Array_By_Parity Leetcode/c_905_Sort_Array_By_Parity)

add_executable(Sort_Array_By_Parity_II Leetcode/c_922_Sort_Array_By_Parity_II)

add_executable(Valid_Mountain_Array Leetcode/c_941_Valid_Mountain_Array)

add_executable(Word_Pattern Leetcode/c_290_Word_Pattern)

add_executable(Minimum_Index_Sum_of_Two_Lists Leetcode/c_599_Minimum_Index_Sum_of_Two_Lists)

add_executable(set_Mismatch Leetcode/c_645_set_Mismatch)

add_executable(Employee_Importance Leetcode/c_690_Employee_Importance)

add_executable(Longest_Word_in_Dictionary Leetcode/c_720_Longest_Word_in_Dictionary)

add_executable(Jewels_and_Stones Leetcode/c_771_Jewels_and_Stones)

add_executable(Uncommon_Words_from_Two_Sentences Leetcode/c_884_Uncommon_Words_from_Two_Sentences)

add_executable(Verifying_an_Alien_Dictionary Leetcode/c_953_Verifying_an_Alien_Dictionary)

add_executable(Design_Linked_List Leetcode/c_707_Design_Linked_List)

add_executable(Middle_of_the_Linked_List Leetcode/c_876_Middle_of_the_Linked_List)

add_executable(Roman_to_Integer Leetcode/b_13_Roman_to_Integer)

add_executable(Nth_Digit Leetcode/c_400_Nth_Digit)

add_executable(Minimum_Moves_to_Equal_Array_Elements Leetcode/c_453_Minimum_Moves_to_Equal_Array_Elements)

add_executable(Range_Addition_II Leetcode/c_598_Range_Addition_II)

add_executable(Self_Dividing_Numbers Leetcode/c_728_Self_Dividing_Numbers)

add_executable(DI_String_Match Leetcode/c_942_DI_String_Match)

add_executable(Reverse_String Leetcode/c_344_Reverse_String)

add_executable(Backspace_String_Compare Leetcode/c_844_Backspace_String_Compare)

add_executable(Long_Pressed_Name Leetcode/c_925_Long_Pressed_Name)

add_executable(Detect_Capital Leetcode/c_520_Detect_Capital)

add_executable(Longest_Uncommon_Subsequence_I Leetcode/c_521_Longest_Uncommon_Subsequence_I)

add_executable(Reverse_Words_in_a_String_III Leetcode/c_557_Reverse_Words_in_a_String_III)

add_executable(Robot_Reture_to_Origin Leetcode/c_657_Robot_Reture_to_Origin)

add_executable(Count_Binary_Substrings Leetcode/c_696_Count_Binary_Substrings)

add_executable(Rotated_Digits Leetcode/c_788_Rotated_Digits)

add_executable(Unique_Morse_Code_Words Leetcode/c_804_Unique_Morse_Code_Words)

add_executable(Buddy_Strings Leetcode/c_859_Buddy_Strings)

add_executable(Groups_of_Special_Equivalent_Strings Leetcode/c_893_Groups_of_Special_Equivalent_Strings)

add_executable(Reverse_Only_Letters Leetcode/c_917_Reverse_Only_Letters)

add_executable(Unique_Email_Addresses Leetcode/c_929_Unique_Email_Addresses)

add_executable(heaters Leetcode/c_475_heaters)

add_executable(K_Closet_Points_to_Origin Leetcode/c_973_K_Closet_Points_to_Origin)

add_executable(House_Robber Leetcode/c_198_House_Robber)

add_executable(Range_Sum_Query_Immutable Leetcode/c_303_Range_Sum_Query_Immutable)

add_executable(Binary_Watch Leetcode/c_401_Binary_Watch)

add_executable(Letter_Case_Permutation Leetcode/c_784_Letter_Case_Permutation)

add_executable(Next_Greater_Element_I Leetcode/c_496_Next_Greater_Element_I)

add_executable(Kth_Largest_Element_in_a_Stream Leetcode/c_703_Kth_Largest_Element_in_a_Stream)

add_executable(Squares_of_a_Sorted_Array Leetcode/c_977_Squares_of_a_Sorted_Array)

add_executable(Flood_Fill Leetcode/c_733_Flood_Fill)

add_executable(Minimum_Absolute_Difference_in_BST Leetcode/c_530_Minimum_Absolute_Difference_in_BST)

add_executable(Number_of_Recent_Calls Leetcode/c_933_Number_of_Recent_Calls)

add_executable(Surface_Area_of_3D_Shapes Leetcode/c_892_Surface_Area_of_3D_Shapes)

add_executable(Fibonacci_Number Leetcode/c_509_Fibonacci_Number)

add_executable(Largest_Perimeter_Triangle Leetcode/c_976_Largest_Perimeter_Triangle)

add_executable(Repeated_Element_in_Size_2N_Array Leetcode/c_961_N_Repeated_Element_in_Size_2N_Array)

add_executable(Binary_Gap Leetcode/c_868_Binary_Gap)

add_executable(Largest_Time_for_Given_Digits Leetcode/c_949_Largest_Time_for_Given_Digits)

add_executable(Powerful_Integers Leetcode/c_970_Powerful_Integers)

add_executable(Projection_Area_of_3D_Shapes Leetcode/c_883_Projection_Area_of_3D_Shapes)

add_executable(Smallest_Range_I Leetcode/c_908_Smallest_Range_I)

add_executable(Assign_Cookies Leetcode/c_455_Assign_Cookies)

add_executable(Lemonade_Change Leetcode/c_860_Lemonade_Change)

add_executable(Add_to_Array_Form_of_Integer Leetcode/c_989_Add_to_Array_Form_of_Integer)

add_executable(Base_7 Leetcode/c_504_Base_7)

add_executable(Word_Search Leetcode/b_79_Word_Search)

add_executable(sort_algorithm Routine/sort_algorithm)

add_executable(Add_Two_Numbers Leetcode/a_2_Add_Two_Numbers)

add_executable(Best_Time_to_Buy_and_Sell_Stock_with_Cooldown Leetcode/c_309_Best_Time_to_Buy_and_Sell_Stock_with_Cooldown)

add_executable(Binary_Tree_Level_Order_Traversal Leetcode/c_102_Binary_Tree_Level_Order_Traversal)

add_executable(Longest_Increasing_Subsequence Leetcode/c_300_Longest_Increasing_Subsequence)

add_executable(Combination_Sum Leetcode/b_39_Combination_Sum)

add_executable(Validate_Binary_Search_Tree Leetcode/b_98_Validate_Binary_Search_Tree)

add_executable(reConstruct_Binary_Tree Routine/reConstruct_Binary_Tree)

add_executable(Find_max_sum_in_Matrix InterviewQ/Find_max_sum_in_Matrix)

add_executable(Cousins_in_Binary_Tree Leetcode/c_993_Cousins_in_Binary_Tree)